# glbackup

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gitlabbackup/: __init__.py  backup.py  cli.py  config.py  discovery.py  display.py  executor.py  gitlab.py  manifest.py  models.py
tests/: conftest.py  test_backup.py  test_config.py  test_discovery.py  test_gitlab.py  test_manifest.py  test_models.py
