[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glbackup"
version = "0.2.0"
description = "Mirror-clone GitLab repositories to local disk"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
glbackup = "gitlabbackup.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/gitlabbackup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
